French to English !

--- a/apps/Installer.html
+++ b/apps/Installer.html
@@ -39,7 +39,7 @@
                 document.getElementById('app_url').value = "";
                 alert("Application bien ajoutée !");
             }else{
-                alert("Veuillez remplir tous les champs !");
+                alert("Please enter all the information !");
             }
         }
     </script>
