--- a/apps/TaskManager.html
+++ b/apps/TaskManager.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="../apps UI/ui.css">
     <script>
         if(window.location.href.startsWith("file:///")){
-            alert('Cette applcation ne fonctionnera que si votre Selaria est hébergée sur un serveur web.');
+            alert('This software will only work if it is executed on a web server .');
         }
     </script>
 </head>
