--- a/index mobile.html
+++ b/index mobile.html
@@ -72,7 +72,7 @@
 </head>
 <body onload="javascript:load();">
     <div class="bar" id="bar_id">
-        <button id="time_base_button" class="bar_button" style="width: 100%;">Impossible de trouver la date!</button>
+        <button id="time_base_button" class="bar_button" style="width: 100%;">Unable to find the date !</button>
     </div>
     <div class="bar" id="bar_down" style="position: absolute;bottom: 0px;">
         <button id="bar_base_button_O" class="bar_button" onclick="javascript:document.getElementById('apps').src='system_page/mobile_app_list.html';">
