--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <button id="bar_base_button_Apps" class="bar_button" onclick="javascript:open_menu('bar_menu_apps');">
             <span class="gg-browser"></span>
         </button>
-        <button id="time_base_button" class="bar_button" style="position: fixed;left: 47.9%;">Impossible de trouver la date!</button>
+        <button id="time_base_button" class="bar_button" style="position: fixed;left: 47.9%;">Unable to find the date !</button>
         <button id="bar_base_button" class="bar_button" style="float: right;" onclick="javascript:open_menu('barmenu_Power');">
             <span class="gg-log-off"></span>
         </button>
@@ -307,12 +307,12 @@
         </button>
     </div>
     <div class="bar_menu" id="bar_menu_O">
-        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/');">menu des apps</button>
-        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">éxécuter</button>
-        <button class="bar_button menu_button_long" onclick="javascript:first_startup();">premier démarrage</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/');">applications menu</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">execute</button>
+        <button class="bar_button menu_button_long" onclick="javascript:first_startup();">first startup</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/terminal.html');">Terminal</button>
-        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/apropos.html');">À propos</button>
-        <button class="bar_button menu_button_long" onclick='javascript:open_vm();'>Machine Virtuelle</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/apropos.html');">About</button>
+        <button class="bar_button menu_button_long" onclick='javascript:open_vm();'>Virtual machine</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('https://classic.minecraft.net');">Minecraft</button>
     </div>
     <div class="bar_menu" id="bar_menu_apps">
@@ -321,19 +321,19 @@
         </button>
     </div>
     <div class="bar_menu_right" id="barmenu_Power">
-        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='ressources/veille.html';">mettre en veille</button>
-        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Eteindre</button>
+        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='ressources/veille.html';">put to sleep</button>
+        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Shutdown</button>
     </div>
     <div class="bar_menu" id="context_menu">
-        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">éxécuter</button>
-        <button class="bar_button menu_button_long" onclick="javascript:first_startup();">premier démarrage</button>
-        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='ressources/veille.html';">mettre en veille</button>
-        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Eteindre</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">execute</button>
+        <button class="bar_button menu_button_long" onclick="javascript:first_startup();">first startup</button>
+        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='ressources/veille.html';">put to sleep</button>
+        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Shutdown</button>
 
-        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/apropos.html');">à propos</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/apropos.html');">About</button>
     </div>
     <div class="bar_menu" id="context_menu_O">
-        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Eteindre</button>
+        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Shutdown</button>
     </div>
     <textarea name="" id="notes" cols="30" rows="10"></textarea>
 </body>
