--- a/system_page/mobile_app_list.html
+++ b/system_page/mobile_app_list.html
@@ -43,7 +43,7 @@
     </button>
     <button class="app_button" onclick="javascript:document.location.href='../apps/apropos.html';">
         <span class="gg-eye-alt"></span>
-        <p>Page à propos</p>
+        <p>About page</p>
     </button>
     <button class="app_button" onclick="javascript:document.location.href='https://classic.minecraft.net';">
         <span class="gg-border-all"></span>
