--- a/apps/about.html
+++ b/apps/about.html
@@ -19,11 +19,11 @@
 <body>
     <img src="../ressources/logo/logo.png" width="135px" height="135px">
     <h1>à propos</h1>
-    <p><strong>crée par :</strong> Yannou</p>
-    <p><strong>année :</strong> 2022</p>
-    <p><strong>version du système : </strong>v3.5 X:stable</p>
-    <p><strong>langue : </strong><span id="LANGUAGE"></span></p>
-    <p><strong>connecté à internet : </strong><span id="ONLINE"></span></p>
+    <p><strong>made by :</strong> Yannou</p>
+    <p><strong>year :</strong> 2022</p>
+    <p><strong>system version : </strong>v3.5 X:stable</p>
+    <p><strong>language : </strong><span id="LANGUAGE"></span></p>
+    <p><strong>online : </strong><span id="ONLINE"></span></p>
 </body>
 <script>
     document.getElementById("LANGUAGE").innerHTML = navigator.language;
