--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">execute</button>
         <button class="bar_button menu_button_long" onclick="javascript:first_startup();">first startup</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/terminal.html');">Terminal</button>
-        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/apropos.html');">About</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/about.html');">About</button>
         <button class="bar_button menu_button_long" onclick='javascript:open_vm();'>Virtual machine</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('https://classic.minecraft.net');">Minecraft</button>
     </div>
