--- a/system_page/mobile_app_list.html
+++ b/system_page/mobile_app_list.html
@@ -41,7 +41,7 @@
         <span class="gg-terminal"></span>
         <p>Selaria Terminal</p>
     </button>
-    <button class="app_button" onclick="javascript:document.location.href='../apps/apropos.html';">
+    <button class="app_button" onclick="javascript:document.location.href='../apps/about.html';">
         <span class="gg-eye-alt"></span>
         <p>About page</p>
     </button>
