--- a/system_page/mobile_app_list.html
+++ b/system_page/mobile_app_list.html
@@ -51,7 +51,7 @@
     </button>
     <button class="app_button" onclick="javascript:document.location.href='../apps/';">
         <span class="gg-feed"></span>
-        <p>All application menu</p>
+        <p>All applications menu</p>
     </button>
 </body>
 </html>
