--- a/system_page/important_error.html
+++ b/system_page/important_error.html
@@ -38,6 +38,12 @@
         if($_GET["error"] == "TEST"){
             window.location.href = "../index.html";
         }
+        if($_GET["error"] == ""){
+            window.location.href = "../index.html";
+        }
+        if($_GET["error"] == "undefined"){
+            window.location.href = "../index.html";
+        }
     }, 5000);
 </script>
 </html>
