--- a/index.html
+++ b/index.html
@@ -259,9 +259,6 @@
                 root: document.body,
                 Uuid: App_uuid,
                 id: "app",
-                onclose: function(){
-                    
-                }
             });
         }
         async function load()
@@ -331,7 +328,7 @@
                 root: document.body,
             });
         }
-        function apps_installer_modal(){
+        function apps_installer(){
             new WinBox('Apps Installer', {
                 border: "0px",
                 url:'apps/Installer.html',
@@ -394,20 +391,18 @@
         <button class="bar_button menu_button_long" onclick="javascript:open_app('https://classic.minecraft.net');">Minecraft</button>
     </div>
     <div class="bar_menu" id="bar_menu_apps">
-        <button class="bar_button menu_button_long" onclick="javascript:apps_installer_modal();">
+        <button class="bar_button menu_button_long" onclick="javascript:apps_installer();">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="currentColor" /><path fill-rule="evenodd" clip-rule="evenodd" d="M13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7V11H7C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13H11V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13H17C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11H13V7Z" fill="currentColor"/></svg>
         </button>
     </div>
     <div class="bar_menu_right" id="barmenu_Power">
-        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='ressources/veille.html';">put to sleep</button>
         <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Shutdown</button>
     </div>
     <div class="bar_menu" id="context_menu">
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">execute</button>
         <button class="bar_button menu_button_long" onclick="javascript:first_startup();">first startup</button>
-        <button class="bar_button menu_button_long" onclick="javascript:document.location.href='ressources/veille.html';">put to sleep</button>
         <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Shutdown</button>
-        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/apropos.html');">About</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/about.html');">About</button>
     </div>
     <div class="bar_menu" id="context_menu_O">
         <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Shutdown</button>
@@ -433,6 +428,9 @@
     }
     setInterval(allsecondsfunction, 1000);
     document.addEventListener('contextmenu', function (e){
+        var context_menu = document.getElementById('context_menu_desktop');
+        context_menu.style.display = 'none';
+        context_menu.style.visibility = 'hidden';
         var context_menu = document.getElementById('context_menu');
         context_menu.style.display = 'none';
         context_menu.style.visibility = 'hidden';
