--- a/system_page/important_error.html
+++ b/system_page/important_error.html
@@ -19,7 +19,7 @@
             display: table-cell;
             vertical-align: middle;
         }
-        * {cursor: none;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;text-align: center;color: white;}
+        * {cursor: none;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;color: white;}
     </style>
 </head>
 <body>
@@ -43,6 +43,14 @@
         }
         if($_GET["error"] == "undefined"){
             window.location.href = "../index.html";
+        }
+        if($_GET["error"] == "localStorageCorrupted"){
+            document.body.innerHTML = "<h1>Repair</h1><p>Selaria has detected that your localStorage is corrupted . We need to delete all the LocalStorage . This does not have any damage to your host computer . <strong>If it's the first time you launch this Operating System , is normal</strong> .</p>";
+            setTimeout(function(){
+                localStorage.clear();
+                window.location.href = "../index.html";
+                localStorage.setItem("localStorageVerification", "Normal");
+            }, 5319);
         }
     }, 5000);
 </script>
