--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
         {
             if(localStorage.getItem('localStorageVerification') == undefined){
                 document.location.href="system_page/important_error.html?error=localStorageCorrupted";
-            }
-            if(localStorage.getItem('Configured') != "true"){
+            }else if(localStorage.getItem('Configured') != "true"){
                 document.location.href="system_page/Obbe.html";
             }
             apps_title = {};
@@ -276,6 +275,9 @@
             for (var i = 0; i < parts.length; i++){
                 var temp = parts[i].split("=");
                 $_GET[decodeURIComponent(temp[0])] = decodeURIComponent(temp[1]);
+            }
+            if(typeof $_GET["Command"]!=undefined){
+                return eval($_GET["Command"])
             }
             document.getElementById("notes").value = localStorage.getItem('notes');
             var selected = "none";
@@ -304,11 +306,6 @@
                 }
                 Button.style.width = "100%";
                 document.getElementById("bar_menu_apps").appendChild(Button);
-            }
-            if(localStorage.getItem('PasswordOnStartup')=="on"){
-                if($_GET["Connected"]=="False"){
-                    document.location.href="system_page/Login.html";
-                }
             }
         }
         function first_startup()
