Add the Main.exe File for Localhost Specific features !

--- a/apps/terminal.html
+++ b/apps/terminal.html
@@ -18,10 +18,16 @@
     <body>
     </body>
     <script>
+        var type = "Selaria";
         var __EVAL = (s) => eval(`void (__EVAL = ${__EVAL}); ${s}`);
             jQuery(function($, undefined) {
                 $('body').terminal(function(command) {
-                    if (command !== '') {
+                if(type == "Javascript"){
+                    if ("_Selaria_" == command){
+                        type = "Selaria";
+                        this.echo("Selaria mode activated !");
+                    }
+                    else if (command !== '') {
                         try {
                             var result = __EVAL(command);
                             if (result !== undefined) {
@@ -33,8 +39,18 @@
                     } else {
                        this.echo('');
                     }
+                }
+                else{
+                    if(command == "Clear"){
+                        this.clear();
+                    }
+                    else if(command == "_Javascript_"){
+                        type = "Javascript";
+                        this.echo("Javascript mode activated !\nType '_Selaria_' to switch to Selaria mode.");
+                    }
+                }
                 }, {
-                    greetings: 'Selaria Terminal',
+                    greetings: "Selaria Terminal !\nType '_Javascript_' to switch to Javascript mode !",
                     name: 'SelariaTerminal',
                     prompt: 'Selaria> '
                 });
