Add the terminal "_Selaria_" and "_Javascript_" mode !
.

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 x: "center",
                 y: "center",
                 top: "35px",
-                root: document.body,
+                root: document.body
             });
         }
         function apps_installer(){
