--- a/index.html
+++ b/index.html
@@ -127,17 +127,40 @@
         }
         .wb-title{
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-weight: lighter;
         }
         h1, h2, h3, h4, h5, h6, p, a{
             font-style: normal;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         .winbox.min{
-            border-radius: 0;
             z-index: 951;
         }
         .winbox.max{
             border-radius: 0;
+        }
+        .wb-max{
+            background-image: url("ressources/Winbox/MaxIcon.svg");
+            background-size: 25px;
+            z-index: 951;
+        }
+        .wb-min{
+            background-image: url("ressources/Winbox/MinIcon.svg");
+            background-size: 25px;
+            position: relative;
+            z-index: 951;
+            top: 5.9px;
+        }
+        .wb-close{
+            background-image: url("ressources/Winbox/CloseIcon.svg");
+            background-size: 25px;
+            z-index: 951;
+        }
+        .wb-full{
+            background-image: url("ressources/Winbox/FullIcon.svg");
+            background-size: 25px;
+            float: left;
+            z-index: 951;
         }
         #notes{
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
